// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// RPC proto API for Joint Fabric capabilities

syntax = "proto3";

import 'pw_protobuf_protos/common.proto';

message OwnershipContext {
  uint64 node_id = 1;
}

service JointFabric {
  /* JFC executes the commissioner role and JFA the administrator steps */
  rpc TransferOwnership(OwnershipContext) returns (pw.protobuf.Empty) {}
}
